--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -34,9 +34,13 @@
   --ifm-link-hover-color: #dc4e4b;
   --ifm-link-color: #dc4e4b;
 
-  .table-of-contents__link:hover, .table-of-contents__link:hover code, .table-of-contents__link--active, .table-of-contents__link--active code {
-    color: #dc4e4b;
-  }
+}
+
+[data-theme='dark'] .table-of-contents__link:hover,
+[data-theme='dark'] .table-of-contents__link:hover code,
+[data-theme='dark'] .table-of-contents__link--active,
+[data-theme='dark'] .table-of-contents__link--active code {
+  color: #dc4e4b;
 }
 
 .header-github-link:hover {
